# jax_snippets

gymnax_flappy_2/: pyproject.toml
gymnax_flappy_2/src/gymnax_flappy_2/: gym_flappy_logic.py  gym_flappy_main.py  gym_flappy_renderer.py  gym_rl.py
jaxpr/: jaxpr_graph.py  jaxpr_test.py  test.py
jit/: example.txt  jit_test.py  linear_regression.py  neural_network.py  next.py
linear_regression/: linear_regression.py
voxtral/: llm_implementation.py  notes.md  rough_outline.py  voxtral.ipynb
